[package]
name = "f"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = "0.5"
tokio = { version = "1.17", features = ["full"] }
thiserror = "1.0"
libc = { version = "0.2.98", default-features = false }
rlimit = "0.7"
bytes = "1"
atoi = "1"